<resources>
    <string name="app_name">Living3.0</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="nothing" translatable="false"></string>
    <string name="origin_exhibition">展館起源</string>
    <string name="guide_introduction">導覧簡介</string>
    <string name="rules_automated_guide">自動導覧規定</string>
    <string name="tour_title">請選擇導覧人員</string>
    <string name="next_page">下一頁</string>
    <string name="ok" translatable="false">OK</string>
    <string name="survey_title">問卷</string>
    <string name="origin_content"><![CDATA[內政部建築研究所長期推動「智慧建築」，期盼透過建築與資通訊科技技術的整合，以達成人性化空間、提昇生活環境品質之目的。
    \n\n為了讓國人瞭解與輕鬆體驗智慧化生活，建研所於民國97年創建「LIVING 3.0 智慧化居住空間展示中心」，作為國內智慧建築教育訓練基地，以推廣智慧建築概念、提供功能體驗，進而開創國內資通訊科技產業異業結合的新契機。
    \n\n本展示中心以「人性關懷、創新科技、前瞻生活、環保節能、智慧永續」為主題，整合了多元的智慧化科技、創新的資通訊主動感知及控制技術，並應用情境與示範系統的建置，提供國人體驗智慧化居住及辦公空間與多種情境模式，及創造前瞻優質的生活環境與品質之願景。]]></string>
    <string name="tour_content"><![CDATA[本展示中心的參訪範圍有2層樓，1F展示居住空間情境，2F展示辦公空間情境。總共引進200多項的智慧型設備，合計有90多家國內廠商參與，其中95%的設備現今都已產品化發展。部分情境應用與設備，歡迎來賓實際動手體驗。\n\n導覽系統裡有3個導覽人物，來賓可依喜好自由選擇，將由他陪伴您進行自動導覽之旅，並認識、體驗智慧生活。]]></string>
    <string name="rule_content"><![CDATA[為維護所有來賓的權益及導覽品質，提醒您遵守以下規定：<br>
    <h5><font color=#4a90e2>關於環境品質：</font></h5>1.全館禁止飲食，食物、飲料請借放至服務台。若有攜帶隨身白開水，飲用時請暫時遠離展場中的設施、設備、平板電腦。<br><br>2.請將個人行動電話轉為靜音，避免大聲談話，展場內禁止喧嘩。\n
    <h5><font color=#4a90e2>關於導覽平板：</font></h5>1.平板電腦僅供自動導覽使用，無開放連外網路；並請勿透過任何數位工具，上傳、下載任何數位資料。<br><br>2.平板電腦有內建定位引擎，請勿攜出展場範圍(如地圖)，且都有。如需至洗手間，請將平板電腦交給服務台保管；若不慎攜離展場，展館人員會主動與您連繫。<br><br>3.自動導覽結束時，記得回到服務台辦理歸還、取回證件，並確認平板電腦功能正常。\n
    <h5><font color=#4a90e2>關於展場設施設備：</font></h5>1.展場中的設施、設備若有標示「可操作」者，歡迎來賓現場操作、體驗。<br><br>2.自動導覽過程中，若因個人因素而造成展場中的設施、設備嚴重損害，來賓須承擔部分修繕責任。]]>
    </string>
    <string name="tour_select_guide">左右滑動即可\n變改導覧人員</string>
    <string name="tour_select_designer">設計師</string>
    <string name="tour_select_robot">機器人</string>
    <string name="tour_select_housekeeper">管家</string>
    <string name="confirm">確定</string>
    <string name="skip">略過</string>
    <string name="title_activity_tour" translatable="false">TourActivity</string>
    <string name="title_activity_survey" translatable="false">SurveyActivity</string>
    <string name="one_twelfth" translatable="false">1/12</string>
    <string name="two_twelfth" translatable="false">2/12</string>
    <string name="three_twelfth" translatable="false">3/12</string>
    <string name="four_twelfth" translatable="false">4/12</string>
    <string name="five_twelfth" translatable="false">5/12</string>
    <string name="six_twelfth" translatable="false">6/12</string>
    <string name="seven_twelfth" translatable="false">7/12</string>
    <string name="eight_twelfth" translatable="false">8/12</string>
    <string name="night_twelfth" translatable="false">9/12</string>
    <string name="ten_twelfth" translatable="false">10/12</string>
    <string name="eleven_twelfth" translatable="false">11/12</string>
    <string name="twelve_twelfth" translatable="false">12/12</string>
    <string name="survey01_gender">性別</string>
    <string name="survey02_age">年齡</string>
    <string name="survey03_education">教育程度</string>
    <string name="survey04_occupation">目前職業</string>
    <string name="survey05_experience">曾從事之行業工作與智慧化產品開發有關之經歷</string>
    <string name="survey06_income">您個人目前每月平均收入</string>
    <string name="survey07_residence">您目前居住地</string>
    <string name="survey08_house">居住房屋類型</string>
    <string name="survey09_family_organization">家庭組織型態</string>
    <string name="survey10_family">家中具有右列成員</string>
    <string name="survey11_notice">您是由何種管道得知本展示中心導覽服務</string>
    <string name="survey12_personal">請輸入您的資料</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="main_info">廠商資訊</string>
    <string name="main_diary">文青日誌</string>
    <string name="main_map" translatable="false">Map</string>
    <string name="main_sound">語音導覧</string>
    <string name="main_font">字型縮放</string>
    <string name="txt_privacy">本資料受個資法保護</string>
    <string name="survey_other">其它</string>
    <string name="survey_age_below_20">20歲以下</string>
    <string name="survey_age_21_25">20歲~25歲</string>
    <string name="survey_age_26_30">26歲~30歲</string>
    <string name="survey_age_31_40">31歲~40歲</string>
    <string name="survey_age_41_50">41歲~50歲</string>
    <string name="survey_age_51_60">51歲~60歲</string>
    <string name="survey_age_61_65">61歲~65歲</string>
    <string name="survey_age_over_66">61歲以上</string>
    <string name="survey_education_high_school">高中以下</string>
    <string name="survey_education_college">專科</string>
    <string name="survey_education_university">大學</string>
    <string name="survey_education_master">研究所(含)以上</string>
    <string name="survey_occupation_student">學生</string>
    <string name="survey_occupation_government">公職人員</string>
    <string name="survey_occupation_education">教育服務業</string>
    <string name="survey_occupation_building">營造建築業</string>
    <string name="survey_occupation_electronic">電子業</string>
    <string name="survey_occupation_service">服務業</string>
    <string name="survey_occupation_real_estate">不動產業</string>
    <string name="survey_occupation_communication">通訊及傳播業</string>
    <string name="survey_occupation_finance_insurance">金融及保險業</string>
    <string name="survey_occupation_manufacture">製造業</string>
    <string name="survey_occupation_housekeep">管家</string>
    <string name="survey_residence_north">台灣北部</string>
    <string name="survey_residence_middle">台灣中部</string>
    <string name="survey_residence_south">台灣南部</string>
    <string name="survey_residence_east">台灣東部</string>
    <string name="survey_residence_outside">外島地區</string>
    <string name="survey_house_apartment">公寓</string>
    <string name="survey_house_revenue">集合式住宅</string>
    <string name="survey_house_mixed">住商混合大樓</string>
    <string name="survey_house_townhouse">獨棟透天厝</string>
    <string name="survey_family_core">核心家庭</string>
    <string name="survey_family_single">單人家庭</string>
    <string name="survey_family_twice">夫婦二人</string>
    <string name="survey_family_single_parent">單親家庭</string>
    <string name="survey_family_three">三代家庭</string>
    <string name="survey_income_5k_10k">5千-1萬元</string>
    <string name="survey_income_11k_20k">1萬1千-2萬元</string>
    <string name="survey_income_21k_30k">2萬1千-3萬元</string>
    <string name="survey_income_31k_40k">3萬1千-4萬元</string>
    <string name="survey_income_41k_50k">4萬1千-5萬元</string>
    <string name="survey_income_51k_60k">5萬1千-6萬元</string>
    <string name="survey_income_over_60k">6萬元以上</string>
    <string name="survey_exp_none">無</string>
    <string name="survey_exp_1y">1年以下</string>
    <string name="survey_exp_3y">1–3年</string>
    <string name="survey_exp_5y">3–5年</string>
    <string name="survey_exp_10y">5–10年</string>
    <string name="survey_exp_over_10y">10年以上</string>
    <string name="survey_member_none">無</string>
    <string name="survey_member_handicap">有行動不便者</string>
    <string name="survey_member_over_65">有65歲以上老人</string>
    <string name="survey_notice_newspaper">報章媒體</string>
    <string name="survey_notice_news">新聞媒體</string>
    <string name="survey_notice_net">網際網路</string>
    <string name="survey_notice_other_people">親友、同事推薦</string>
    <string name="survey_notice_school">學校、機關團體</string>
    <string name="name">姓名</string>
    <string name="mail">電子信箱</string>
    <string name="choose_template">選擇版型</string>
    <string name="nextstep">下一步</string>
    <string name="write_text">寫文字</string>
    <string name="build_text">內建文字</string>
    <string name="feedback_title">問卷填寫</string>
    <string name="feedback_text">恭喜完成1樓導覧\n願意提供給我們寶貴的意見嗎？</string>
    <string name="map_area_enter">進入導覧</string>
    <string name="read">已讀</string>
    <string name="mode_select_title">種模式</string>
    <string name="equip">設備</string>
    <string name="photo" translatable="false">PHOTO</string>
    <string name="video" translatable="false">VIDEO</string>
    <string name="survey_gender_female">女</string>
    <string name="survey_gender_male">男</string>
    <string name="demo_text">這是範例</string>
    <string name="feedback_yes">我要給意見</string>
    <string name="feedback_no">不用，我要繼續導覧</string>
    <string name="survey_popup_text">貴賓您好，感謝您撥冗參觀展示中心，為使本中心未來設備系統開發與服務品質的提升，請您利用簡短時間填寫本表，您所提供的資料受個資法保護，僅供問卷統計、整體分析使用，感謝您的協助。</string>
    <string name="title_activity_counter" translatable="false">CounterActivity</string>
    <string name="title_activity_connection" translatable="false">ConnectionActivity</string>
    <string name="choose_photo">選取照片</string>
    <string name="text_master">文字創作</string>
    <string name="choose_area">您所在的區域</string>
    <string name="buildContext1" translatable="false">張開雙眼，敞開心胸，你就不會失去任何事物</string>
    <string name="buildContext2" translatable="false">就繼續往前走吧 !</string>
    <string name="buildContext3" translatable="false">盡心完成做你能力所及的事，並面對那些能力所不及的挑戰</string>
    <string name="store_sucess">儲存成功</string>
    <string name="feedback_title_1" translatable="false">Question 1</string>
    <string name="feedback_title_2" translatable="false">Question 2</string>
    <string name="feedback_title_3" translatable="false">Question 3</string>
    <string name="feedback_title_4" translatable="false">Question 4</string>
    <string name="feedback_title_5" translatable="false">Question 5</string>
    <string name="feedback_title_6" translatable="false">Question 6</string>
    <string name="feedback_title_7" translatable="false">Question 7</string>
    <string name="feedback_title_8" translatable="false">Question 8</string>
    <string name="feedback_question_1">您對智慧化科技產品的態度傾向</string>
    <string name="feedback_question_2">您對智慧化科技產品購買與使用態度傾向，其重要程度看法如何？</string>
    <string name="feedback_question_3">依您目前生活條件或機能需求狀況，針對展示中心系統及設備中您最想購買的前２項產品為哪些？其原因為何？</string>
    <string name="feedback_question_4">您是否需要這些系統或設備廠商提供您產品相關資訊？</string>
    <string name="feedback_question_5">如果現在廠商可以免費在家裡幫您安裝５項系統或設備，您會選哪５項？</string>
    <string name="feedback_question_6">展示中心系統或設備介紹過程中，您認為印象良好的系統或設備有哪些?</string>
    <string name="feedback_question_8">您認為單項智慧化系統或設備的平均合理價格為多少？</string>
    <string name="feedback_very_support">&#160;&#160;&#160;非常支持</string>
    <string name="feedback_support">&#160;&#160;&#160;支持</string>
    <string name="feedback_soso">&#160;&#160;&#160;尚可</string>
    <string name="feedback_unsupport">&#160;&#160;&#160;不支持</string>
    <string name="feedback_very_unsupport">&#160;&#160;&#160;非常不支持</string>
    <string name="feedback_very_important">&#160;&#160;&#160;非常重要</string>
    <string name="feedback_important">&#160;&#160;&#160;重要</string>
    <string name="feedback_sosososo">&#160;&#160;&#160;普通</string>
    <string name="feedback_unimportant">&#160;&#160;&#160;不重要</string>
    <string name="feedback_very_unimportant">&#160;&#160;&#160;非常不重要</string>
    <string name="feedback_next">下一題</string>
    <string name="feedback_function">功能性</string>
    <string name="feedback_beauty">視覺美觀性</string>
    <string name="feedback_operability">實用操作性</string>
    <string name="feedback_humility">人性化設計性</string>
    <string name="feedback_price">價格性</string>
    <string name="feedback_maintenance">維護與管理性</string>
    <string name="feedback_safetly">安全性</string>
    <string name="feedback_energy">節能性</string>
    <string name="feedback_first_order">第一優先購買的商品為</string>
    <string name="feedback_second_order">第二優先購買的商品為</string>
    <string name="feedback_third_order">第三優先購買的商品為</string>
    <string name="feedback_fourth_order">第四優先購買的商品為</string>
    <string name="feedback_fifth_order">第五優先購買的商品為</string>
    <string name="feedback_first_order_reason">因為商品具有：(可複選)</string>
    <string name="mapguide_title">地圖指引</string>
    <string name="mapguide_now">現在位置</string>
    <string name="mapguide_tour">參觀動線</string>
    <string name="mapguide_visited">已參觀點位</string>
    <string name="mapguide_unvisited">未參觀點位</string>
    <string name="mapguide_next_visited">下一個參觀點位</string>
</resources>