<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/feedback_popup_bg"
    android:gravity="center_horizontal"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_text"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="140dp"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bluesquare_normal"
        android:layout_marginTop="260dp"
        android:id="@+id/btn_confirm_alertdialog_feedback"
        android:text="@string/feedback_yes"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_graysquare_normal"
        android:id="@+id/btn_skip_alertdialog_feedback"
        android:layout_below="@+id/btn_confirm_alertdialog_feedback"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_no"
        android:textColor="@color/survey_page_color"/>

</RelativeLayout>